Pricing page - Replaced main section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11661,6 +11661,22 @@ a.bd-backtotop-1:hover {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDE3 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDE5 {}
+.bd-layoutbox-19 {
+  background-color: #f2f2f2;
+  padding: 20px;
+  border: 1px solid #d6d6d6;
+}
+.bd-layoutbox-19 {
+  text-align: center;
+}
+.bd-layoutbox-19 h4 {
+  text-align: center;
+}
+.bd-layoutbox-19 h2 {
+  text-align: center;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDE5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDI {}
 .bd-layoutbox-2 {
   position: relative;
@@ -11673,6 +11689,18 @@ a.bd-backtotop-1:hover {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDI {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDIx {}
+.bd-layoutbox-21 {
+  padding-bottom: 60px;
+  border-top: 1px solid #ffffff;
+  border-right: 1px solid #d6d6d6;
+  border-bottom: 1px solid #d6d6d6;
+  border-left: 1px solid #d6d6d6;
+}
+.bd-layoutbox-21 {
+  text-align: center;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDIx {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDIy {}
 .bd-layoutbox-22 {
   position: absolute;
@@ -11816,8 +11844,6 @@ a.bd-backtotop-1:hover {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM3 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM4 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM4 {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM5 {}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQw {}
 .bd-layoutbox-40 {
   background-color: #f5f5f5;
@@ -11889,8 +11915,98 @@ a.bd-backtotop-1:hover {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQ1 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQ4 {}
+.bd-layoutbox-48 {
+  background-color: #f2f2f2;
+  padding: 20px;
+  border: 1px solid #d6d6d6;
+}
+.bd-layoutbox-48 {
+  text-align: center;
+}
+.bd-layoutbox-48 h4 {
+  text-align: center;
+}
+.bd-layoutbox-48 h2 {
+  text-align: center;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQ4 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDU {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDU {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDUw {}
+.bd-layoutbox-50 {
+  padding-bottom: 60px;
+  border-top: 1px solid #ffffff;
+  border-right: 1px solid #d6d6d6;
+  border-bottom: 1px solid #d6d6d6;
+  border-left: 1px solid #d6d6d6;
+}
+.bd-layoutbox-50 {
+  text-align: center;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDUw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDUy {}
+.bd-layoutbox-52 {
+  background-color: #57d175;
+  padding: 20px;
+  border: 1px solid #d6d6d6;
+}
+.bd-layoutbox-52 {
+  text-align: center;
+}
+.bd-layoutbox-52 h4 {
+  text-align: center;
+}
+.bd-layoutbox-52 h2 {
+  text-align: center;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDUy {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDU0 {}
+.bd-layoutbox-54 {
+  background-color: #f2f2f2;
+  padding-bottom: 60px;
+  border-top: 1px solid #ffffff;
+  border-right: 1px solid #d6d6d6;
+  border-bottom: 1px solid #d6d6d6;
+  border-left: 1px solid #d6d6d6;
+}
+.bd-layoutbox-54 {
+  text-align: center;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDU0 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDU2 {}
+.bd-layoutbox-56 {
+  background-color: #f2f2f2;
+  padding: 20px;
+  border: 1px solid #d6d6d6;
+}
+.bd-layoutbox-56 {
+  text-align: center;
+}
+.bd-layoutbox-56 h4 {
+  text-align: center;
+}
+.bd-layoutbox-56 h2 {
+  text-align: center;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDU2 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDU4 {}
+.bd-layoutbox-58 {
+  padding-bottom: 60px;
+  border-top: 1px solid #ffffff;
+  border-right: 1px solid #d6d6d6;
+  border-bottom: 1px solid #d6d6d6;
+  border-left: 1px solid #d6d6d6;
+}
+.bd-layoutbox-58 {
+  text-align: center;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDU4 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDYw {}
+.bd-layoutbox-60 {
+  margin-top: 26px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDYw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc {}
 .bd-layoutbox-7 {
   margin-top: 0px;
@@ -12367,6 +12483,21 @@ a.bd-backtotop-1:hover {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjY {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjc {}
+.bd-layoutcontainer-7 {
+  margin-bottom: 26px;
+}
+.bd-layoutcontainer-7 > .bd-container-inner > .container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+}
+.bd-layoutcolumn-25 {
+  position: relative;
+}
+.bd-layoutcolumn-27 {
+  position: relative;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjc {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjg {}
 .bd-layoutcontainer-8 {
   margin-bottom: 35px;
@@ -12712,6 +12843,46 @@ a.bd-backtotop-1:hover {
   color: #858585;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xNA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xNQ {}
+.bd-linkbutton-15 {
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+.bd-button-40 a {
+  line-height: 20.00000001px;
+  font-size: 14px;
+}
+.bd-button-40 {
+  /* default transparent bg otherwise you get gray default bg */
+  background-color: transparent;
+}
+.bd-button-40,
+.bd-button-40:link,
+.bd-button-40:visited {
+  /* reset browser styles */
+  border-width: 0;
+  padding: 0;
+  color: #ffffff;
+  background-color: #57d175;
+  vertical-align: middle;
+  display: inline-block;
+  text-align: center;
+  width: 80%;
+  padding: 5px 15px;
+  background-image: none;
+}
+.bd-button-40:hover,
+.bd-button-40:focus {
+  background-color: #57d175;
+  text-decoration: none;
+  color: #ffffff;
+  background-image: none;
+}
+.bd-button-40:active {
+  background-color: #858585;
+  background-image: none;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xNQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xNg {}
 .bd-button-41 a {
   line-height: 20.00000001px;
@@ -12762,6 +12933,46 @@ a.bd-backtotop-1:hover {
   color: #858585;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xNg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xOA {}
+.bd-linkbutton-18 {
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+.bd-button-46 a {
+  line-height: 20.00000001px;
+  font-size: 14px;
+}
+.bd-button-46 {
+  /* default transparent bg otherwise you get gray default bg */
+  background-color: transparent;
+}
+.bd-button-46,
+.bd-button-46:link,
+.bd-button-46:visited {
+  /* reset browser styles */
+  border-width: 0;
+  padding: 0;
+  color: #ffffff;
+  background-color: #57d175;
+  vertical-align: middle;
+  display: inline-block;
+  text-align: center;
+  width: 80%;
+  padding: 5px 15px;
+  background-image: none;
+}
+.bd-button-46:hover,
+.bd-button-46:focus {
+  background-color: #57d175;
+  text-decoration: none;
+  color: #ffffff;
+  background-image: none;
+}
+.bd-button-46:active {
+  background-color: #858585;
+  background-image: none;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xOA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24y {}
 .bd-linkbutton-2 {
   margin-top: 0px;
@@ -12812,6 +13023,46 @@ a.bd-backtotop-1:hover {
   color: #858585;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24y {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24yMA {}
+.bd-linkbutton-20 {
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+.bd-button-52 a {
+  line-height: 20.00000001px;
+  font-size: 14px;
+}
+.bd-button-52 {
+  /* default transparent bg otherwise you get gray default bg */
+  background-color: transparent;
+}
+.bd-button-52,
+.bd-button-52:link,
+.bd-button-52:visited {
+  /* reset browser styles */
+  border-width: 0;
+  padding: 0;
+  color: #ffffff;
+  background-color: #57d175;
+  vertical-align: middle;
+  display: inline-block;
+  text-align: center;
+  width: 80%;
+  padding: 5px 15px;
+  background-image: none;
+}
+.bd-button-52:hover,
+.bd-button-52:focus {
+  background-color: #57d175;
+  text-decoration: none;
+  color: #ffffff;
+  background-image: none;
+}
+.bd-button-52:active {
+  background-color: #858585;
+  background-image: none;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24yMA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24yMQ {}
 .bd-linkbutton-21 {
   float: right;
@@ -13223,6 +13474,47 @@ a.bd-backtotop-1:hover {
   color: #858585;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b242 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b243 {}
+.bd-linkbutton-7 {
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+.bd-button-23 a {
+  line-height: 20.00000001px;
+  font-size: 14px;
+}
+.bd-button-23 {
+  /* default transparent bg otherwise you get gray default bg */
+  background-color: transparent;
+}
+.bd-button-23,
+.bd-button-23:link,
+.bd-button-23:visited {
+  /* reset browser styles */
+  border-width: 0;
+  padding: 0;
+  color: #ffffff;
+  background-color: #57d175;
+  vertical-align: middle;
+  display: inline-block;
+  text-align: center;
+  width: 80%;
+  padding: 5px 15px;
+  background-image: none;
+}
+.bd-button-23:hover,
+.bd-button-23:focus {
+  background-color: #ffffff;
+  text-decoration: none;
+  color: #57d175;
+  border: 1px solid #57d175;
+  background-image: none;
+}
+.bd-button-23:active {
+  background-color: #858585;
+  background-image: none;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b243 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b245 {}
 .bd-linkbutton-9 {
   margin-right: 10px;
@@ -13984,8 +14276,6 @@ h2.bd-postheader-4 a {
   text-transform: capitalize;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yMA {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yMQ {}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yMQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24yNA {}
 @media (max-width: 991px) {
   .bd-section-24 {
@@ -14350,6 +14640,11 @@ h2.bd-postheader-4 a {
   text-transform: capitalize;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb244 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb245 {}
+.bd-section-9 {
+  margin-top: 31px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb245 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNvY2lhbGljb25zMg {}
 .bd-socialicons-2 {
   display: inline-block;
@@ -15016,16 +15311,6 @@ h1.bd-textblock-129 {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEzOA {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEzOQ {}
-.bd-textblock-139 {
-  height: 44px;
-}
-@media (max-width: 767px) {
-  .bd-textblock-139 {
-    height: 95px;
-  }
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEzOQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE0 {}
 .bd-textblock-14 {
   margin-bottom: 0px;
@@ -15351,6 +15636,72 @@ h3.bd-textblock-170 {
   font-weight: normal;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3MA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3MQ {}
+.bd-textblock-171 {
+  margin-top: 19px;
+}
+.bd-textblock-171 {
+  font-style: italic;
+  color: #ffffff;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3MQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Mg {}
+.bd-textblock-172 {
+  margin-bottom: 19px;
+  margin-top: 31px;
+}
+h2.bd-textblock-172 {
+  color: #ffffff;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Mg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Mw {}
+.bd-textblock-173 {
+  margin-bottom: 31px;
+  margin-top: 8px;
+}
+h4.bd-textblock-173 {
+  color: #ffffff;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Mw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Nw {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Nw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4 {}
+.bd-textblock-18 {
+  margin-bottom: 19px;
+  margin-top: 31px;
+}
+h2.bd-textblock-18 {
+  color: #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4Mg {}
+.bd-textblock-182 {
+  margin-top: 19px;
+}
+.bd-textblock-182 {
+  font-style: italic;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4Mg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4Mw {}
+.bd-textblock-183 {
+  margin-bottom: 19px;
+  margin-top: 11px;
+}
+h2.bd-textblock-183 {
+  color: #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4Mw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4NA {}
+.bd-textblock-184 {
+  margin-bottom: 0px;
+  margin-top: 8px;
+}
+h4.bd-textblock-184 {
+  color: #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4NA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4OA {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4OA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5 {}
 .bd-textblock-19 {
   margin-top: 0px;
@@ -15361,6 +15712,44 @@ h2.bd-textblock-19 {
   color: #57d175;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5MA {}
+.bd-textblock-190 {
+  display: block;
+}
+h1.bd-textblock-190 {
+  text-align: left;
+}
+.bd-containereffect-8 {
+  display: block;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5MA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5Mg {}
+.bd-textblock-192 {
+  text-align: left;
+}
+.bd-textblock-192 {
+  margin-bottom: 0;
+}
+.bd-containereffect-9 {
+  margin-bottom: 31px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5Mg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5NA {}
+.bd-textblock-194 {
+  height: 44px;
+}
+@media (max-width: 767px) {
+  .bd-textblock-194 {
+    height: 95px;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5NA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5Ng {}
+.bd-textblock-196 {
+  margin-bottom: 11px;
+  margin-top: 0px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE5Ng {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazI {}
 .bd-textblock-2 {
   margin-top: 17px;
@@ -15454,6 +15843,14 @@ h2.bd-textblock-31 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMy {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMz {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMz {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM0 {}
+.bd-textblock-34 {
+  margin-top: 19px;
+}
+.bd-textblock-34 {
+  font-style: italic;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM0 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM1 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM2 {}
@@ -15563,6 +15960,14 @@ h2.bd-textblock-40 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQ5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUx {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUx {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUz {}
+.bd-textblock-53 {
+  margin-top: 19px;
+}
+.bd-textblock-53 {
+  font-style: italic;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUz {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazU0 {}
 .bd-textblock-54 {
   margin-bottom: 12px;
@@ -15573,10 +15978,28 @@ h2.bd-textblock-40 {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazU0 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazU1 {}
+.bd-textblock-55 {
+  margin-bottom: 19px;
+  margin-top: 31px;
+}
+h2.bd-textblock-55 {
+  color: #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazU1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazU2 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazU2 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazU3 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazU3 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazU4 {}
+.bd-textblock-58 {
+  margin-bottom: 31px;
+  margin-top: 8px;
+}
+h4.bd-textblock-58 {
+  color: #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazU4 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazU5 {}
 .bd-textblock-59 {
   margin-top: 86px;
@@ -15650,6 +16073,8 @@ h1.bd-textblock-60 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazY1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazY2 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazY2 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazY3 {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazY3 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazY5 {}
 .bd-textblock-69 {
   margin-top: 23px;
@@ -15721,6 +16146,8 @@ h2.bd-textblock-7 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazc1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazc2 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazc2 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazc3 {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazc3 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazc4 {}
 .bd-textblock-78 {
   height: 57px;
@@ -15769,6 +16196,15 @@ h2.bd-textblock-7 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg4 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg5 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg5 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazk {}
+.bd-textblock-9 {
+  margin-bottom: 31px;
+  margin-top: 8px;
+}
+h4.bd-textblock-9 {
+  color: #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazk {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazkw {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazkw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazkx {}
